fixed bug with collision on self, added CSS elements for cleaner look

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Snake Game!</title>
   </head>
   <body>
+    <h1>Snake Game!</h1>
     <canvas id="gameCanvas" width="600" height="500"></canvas>
+    <p id="instructions">
+      Instructions: Use arrow keys to navigate the snake, eat as many apples as
+      you can, and avoid eating yourself or running into walls!
+    </p>
   </body>
   <script src="./script.js"></script>
 </html>
