Refined code for readability and editiability.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       Instructions: Use arrow keys to navigate the snake, eat as many apples as
       you can, and avoid eating yourself or running into walls!
     </p>
+    <script src="SnakeLinkedList.js"></script>
+    <script src="SnakeNode.js"></script>
+    <script src="GameBoard.js"></script>
+    <script src="./script.js"></script>
   </body>
-  <script src="./script.js"></script>
 </html>
